# LeadsSpotter

logic/: .gitignore  CMakeLists.txt  build.sh  main.cpp  package.json  readme.md  tsconfig.json
logic/config/: config.json
logic/connections/: credentials_example.hpp  database.hpp  queries.h
logic/fetchio/: fetchio.hpp  helpers.hpp
logic/logger/: logger.hpp
logic/migrations/: 20250129001014-create-user.js
logic/models/: user.js
logic/network/: http.hpp
logic/openai/: chat.hpp  helpers.hpp  secrets_example.hpp
logic/safe/: hashpp.hpp
logic/scripts/: chat_tests.py  data.json  performance.sh
logic/src/: connection.ts  declarations.ts  secure.ts  server.ts
ui/: index.html  package.json  vite.config.ts
ui/src/: index.css  index.tsx
ui/src/components/: ChatEntry.tsx  CheckBox.tsx  CompanyCard.tsx  Entry.tsx  Link.tsx  LogoImage.tsx  MenuEntry.tsx  MenuIcon.tsx  MenuItem.tsx  Message.tsx  Timeline.tsx  ToogleSwitch.tsx  Touchable.tsx  User.tsx  chatentry.css  checkbox.css  companycard.css  entry.css  link.css  logoimage.css  menuicon.css  menuitem.css  message.css  timeline.css  toogleswitch.css  touchable.css  user.css
ui/src/declarations/: colors.ts  interfaces.ts
ui/src/layout/: Header.tsx  Layout.tsx  Sidebar.tsx  header.css  layout.css  sidebar.css
ui/src/pages/: Chat.tsx  Configurations.tsx  Home.tsx  Index.tsx  Laboratory.tsx  Leads.tsx  Login.tsx  Maps.tsx  Register.tsx  VerifyingSession.tsx  chat.css  forms.css  home.css  maps.css  verifyingsession.css
